Fixed Wallpaper Stretching and Compressing Issue

--- a/src/style.css
+++ b/src/style.css
@@ -37,11 +37,9 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    object-fit: cover;
+    object-position: center;
     z-index: -1;
-    display: none;
 }
 
 /* Sun glow effect */
